--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,11 @@ dependencies:
   
   # UI Components
   cupertino_icons: ^1.0.6
-  google_fonts: ^6.1.0
+  # google_fonts: ^6.1.0  # REMOVE THIS LINE
   
   # Utilities
   uuid: ^4.2.1
   collection: ^1.18.0
-  vector_math: ^2.1.2
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
