--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,23 +13,23 @@ dependencies:
   # State Management
   provider: ^6.1.1
   
-  # Local Storage
-  sqflite: ^2.3.0
-  path: ^1.8.3
+  # Local Storage (Windows compatible)
+  path_provider: ^2.1.1
+  sqflite_common_ffi: ^2.3.0+4
   shared_preferences: ^2.2.2
   
   # SVG Support
   flutter_svg: ^2.0.9
   path_drawing: ^1.0.1
-  xml: ^6.4.2
+  xml: ^6.5.0
   
   # UI Components
   cupertino_icons: ^1.0.6
-  # google_fonts: ^6.1.0  # REMOVE THIS LINE
   
   # Utilities
   uuid: ^4.2.1
-  collection: ^1.18.0
+  path: ^1.8.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
